--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        I am nav 
+    </nav>
     <main>
+        <div class="box">
+
+        </div>
 
     </main>   
 </body>
