adding logo to navbar

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 <body>
     <nav>
-        I am nav 
+        <img src="/assets/img/logo.svg" alt="NETFLIX">
     </nav>
     <main>
         <div class="box">
-
         </div>
-
     </main>   
 </body>
 </html>
