--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <img src="/assets/img/logo.svg" alt="NETFLIX">
-    </nav>
-    <main>
+    <div class="main">
+        <nav>
+            <span><img width="150" src="/assets/img/logo.svg" alt="NETFLIX"></span>
+            <div >
+                <button>
+                    English
+                </button>
+                <button>
+                    Sign In
+                </button>
+            </div>
+            
+        </nav>
         <div class="box">
-        </div>
-    </main>   
+        </div> 
+    </div>
 </body>
 </html>
