--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <nav>
-            <span><img width="150" src="/assets/img/logo.svg" alt="NETFLIX"></span>
+            <span><img class="img"  src="/assets/img/logo.svg" alt="NETFLIX"></span>
             <div >
                 <button>
                     English
@@ -17,8 +17,7 @@
                 <button>
                     Sign In
                 </button>
-            </div>
-            
+            </div>   
         </nav>
         <div class="box">
         </div> 
