renamed folder and changing folder structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <nav>
-            <span><img class="img"  src="/assets/img/logo.svg" alt="NETFLIX"></span>
+            <span><img class="img"  src="/assets/images/logo.svg" alt="NETFLIX"></span>
             <div >
                 <button>
                     English
