update readme and other updates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <span><img class="img"  src="/assets/images/logo.svg" alt="NETFLIX"></span>
             <div >
                 <button>
-                    English
+                    English <span></span>
                 </button>
                 <button>
                     Sign In
