--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="main">
         <nav>
-            <span><img class="img"  src="/assets/images/logo.svg" alt="NETFLIX"></span>
+            <span><img class="img" src="/assets/images/logo.svg" alt="NETFLIX"></span>
             <div >
                 <button>
-                    English <span></span>
+                    English 
                 </button>
                 <button>
-                    Sign In
+                    Sign In 
                 </button>
             </div>   
         </nav>
