--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                 <a href="faq">Help Centre</a>
                 <a href="faq">Account</a>
                 <a href="faq">Speed Test</a>
-                <a href="faq">Legal Notices</a>
+                <a href="faq">Legal Not 
+                    ices</a>
             </div>
             <div class="footer-item">
                 <a href="faq">Media Centre</a>
